# scholarguard

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  alembic.ini  entrypoint.sh  main.py  pyproject.toml
api/app/: config.py  main.py  worker.py
api/app/middleware/: auth.py  rate_limiter.py
api/app/models/: __init__.py  base.py  dataset.py  detection.py  document.py  review.py  system.py  user.py
api/app/prompts/: suggest_prompt.py
api/app/prompts/detection/: primary_review.py  primary_review_compact.py
api/app/prompts/explanation/: report_generator.py
api/app/prompts/suggestion/: writing_advisor.py
api/app/routers/: admin.py  auth.py  detect.py  research.py  review.py  suggest.py
api/app/schemas/: auth.py  common.py  detect.py  review.py  suggest.py
api/app/services/: ocr.py
api/app/services/detection/: __init__.py  engine.py  fusion.py  preprocessor.py  stats.py
api/app/services/llm_gateway/: __init__.py  client.py
api/app/tasks/: __init__.py  detection_task.py
api/app/utils/: json_extract.py
api/migrations/: env.py
api/migrations/versions/: 23d0aa4374b2_add_detection_status_batch_fields.py  a1b2c3d4e5f6_add_nhpr_columns.py  d644506c97bc_initial_schema_v2.py  d742e87f5a1f_add_heatmap_fields.py
api/scripts/: seed_admin.py
api/tests/: test_fusion.py  test_json_extract.py  test_preprocessor.py  test_stats.py
docs/: 用户指南.docx  用户指南.md  系统管理员手册.docx  系统管理员手册.md  部署手册.docx  部署手册.md
eval/: metrics.py  run_evaluation.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  (+1 more)
(+29 files in other folders)
